--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,5 +5,37 @@
   "display": "standalone",
   "start_url": "/",
   "background_color": "#F5F5F5",
-  "theme_color": "#0A0A0A"
+  "theme_color": "#0A0A0A",
+  "icons": [
+    {
+      "src": "./assets/img/icons/icon48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/img/icons/icon72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/img/icons/icon96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/img/icons/icon144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/img/icons/icon168.png",
+      "sizes": "168x168",
+      "type": "image/png"
+    },
+    {
+      "src": "./assets/img/icons/icon192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
 }
